Update Models and DBConnect

--- a/Web_PizzaShop/appsettings.json
+++ b/Web_PizzaShop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PRN221_DB": "Server=localhost;uid=sa;pwd=12345;database=PRN221_PRJ;TrustServerCertificate=true"
+  }
 }
