--- a/Web_PizzaShop/Web_PizzaShop.csproj
+++ b/Web_PizzaShop/Web_PizzaShop.csproj
@@ -9,9 +9,8 @@
   <ItemGroup>
     <Folder Include="Interface\Common\" />
     <Folder Include="Interface\Customer\" />
-    <Folder Include="Interface\Admin\" />
-    <Folder Include="Interface\Vendor\" />
     <Folder Include="Interface\Public\" />
+    <Folder Include="Interface\Vendor\" />
     <Folder Include="ServiceManager\Admin\" />
     <Folder Include="ServiceManager\Common\" />
     <Folder Include="ServiceManager\Customer\" />
@@ -25,6 +24,15 @@
     <Folder Include="wwwroot\js\Customer\" />
     <Folder Include="wwwroot\js\Vender\" />
     <Folder Include="wwwroot\js\Public\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.27" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.27">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.27" />
   </ItemGroup>
 
 </Project>
